added support for twemoji

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Coming Soon</title>
     <link rel="stylesheet" href="styles.css"/>
     <link rel="icon" href="images/favicon.png" type="images/favicon.png"/>
+    <script src="https://twemoji.maxcdn.com/v/latest/twemoji.min.js" crossorigin="anonymous"></script>
+    <script src="index.js"></script> 
 </head>
 <body>
 
@@ -18,8 +20,6 @@
     <h1 id="countdownminutes"></h1>
     <h1 id="countdownseconds"></h1>
 </div>
-
-<script src="index.js"></script> 
 
 </body>
 </html>
