--- a/index.html
+++ b/index.html
@@ -6,10 +6,21 @@
 <html>
 <head>
     <title>Coming Soon</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css"/>
     <link rel="icon" href="images/favicon.png" type="images/favicon.png"/>
     <script src="https://twemoji.maxcdn.com/v/latest/twemoji.min.js" crossorigin="anonymous"></script>
-    <script src="index.js"></script> 
+    <script src="index.js"></script>
+    <script>
+        window.onload = function() {     
+            twemoji.parse(document.body, 
+                    {folder: 'svg', ext: '.svg'}
+            );
+
+        }
+
+    </script>
 </head>
 <body>
 
