trying something else

--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css"/>
     <link rel="icon" href="images/favicon.png" type="images/favicon.png"/>
-    <script src="https://twemoji.maxcdn.com/v/latest/twemoji.min.js" crossorigin="anonymous"></script>
     <script src="index.js"></script>
 </head>
 <body>
 
 <div class="devil_emoji_container">
-    <h1 class="devil_emoji"> 😈 </h1>
+    <img href="images/favicon.png" class="devil_emoji"></img>
     <h1 id="countdowndays"></h1>
     <h1 id="countdownhours"></h1>
     <h1 id="countdownminutes"></h1>
@@ -24,9 +23,4 @@
 </div>
 
 </body>
-
-    <script>
-        twemoji.parse(document.body)
-    </script>
-    
 </html>
