--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
 <div class="devil_emoji_container">
-    <img src="images/favicon.png" class="devil_emoji"></img>
+    <h1 class="devil_emoji">😈</img>
     <h1 id="countdowndays"></h1>
     <h1 id="countdownhours"></h1>
     <h1 id="countdownminutes"></h1>
